# SubOptimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AppDir/: .DirIcon  AppRun  com.sams200.suboptimal.desktop  suboptimal.desktop
eval/: results.txt
eval/asr/: CMakeLists.txt  download_librispeech.py  evaluate_asr.c  evaluate_asr.h  wer.c  wer.h
eval/nmt/: CMakeLists.txt  bleu.h  download_flores.py  evaluate_nmt.cpp  evaluate_nmt.h
scripts/: asr_eval.sh  download_helsinki_models.py  make_appimage.sh  nmt_eval.sh  upload_to_huggingface.py
src/: cancel.h  cli.c  cli.h  cli_ui.h  context_check.c  context_check.h  defaults.h  file_helpers.c  file_helpers.h  loader.c  loader.h  main.c  parser.c  parser.h  post_processing.c  post_processing.h  subtitles.h  terminal_ui.c  transcribe.c  transcribe.h  translate.cpp  translate.h  validator.c
src/cli/: cli.c  cli.h  cli_ui.c  parser.c  parser.h
src/fs/: file_helpers.c  file_helpers.h  parser.c
src/gui/: MainWindow.cpp  PipelineWorker.cpp  gui.cpp
src/pipeline/: cancel.c  context_check.c  context_check.h  loader.c  loader.h  pipeline.c  pipeline.h  transcribe.c  transcribe.h  translate.cpp  translate.h
src/subtitles/: subtitles.c  subtitles.h  validator.c  validator.h
src/ui/: MainWindow.cpp  MainWindow.h  PipelineWorker.cpp  PipelineWorker.h  gui.cpp  gui.h  resources.qrc
